--- a/myswitch/templates/myswitch/profile.html
+++ b/myswitch/templates/myswitch/profile.html
@@ -1,7 +1,7 @@
 <!--transfer/dashboard/-->
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Profile Change{% endblock %}
+{% block title %}Profile{% endblock %}
 {% block content %}
 	<!-- navbar --> 
 	<div class="templatemo-top-menu">
@@ -31,7 +31,7 @@
 								 <a class="dropdown-item" href="{% url 'transactions' %}">View all Transactions</a>
 								 <a class="dropdown-item" href="{% url 'rateManagement' %}">Rates</a>
 								 {% endif %}
-							  	<a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+							  	<a class="dropdown-item" href="{% url 'logout_view' %}">Logout</a>
 							  </div>
 						  </li>
 						</ul>
@@ -58,49 +58,42 @@
 	  
 	<!-- Transaction -->
 	  <div class="profile container">
-		  <form class="" action="{% url 'usersProfile' person.id %}" method="post">
+		  <form class="" action="{% url 'profile' %}" method="post">
 			  {% csrf_token %}
 			  <h5 class="text-center mt-4">Profile</h5>
 			  <div class="form-group row">
 				<label for="" class="col-sm-2 col-form-label">First Name</label>
 				  <div class="col-sm-10">
-					<input name="firstName" type="text" class="form-control" value="{{person.first_name}}">
+					<input name="firstName" type="text" class="form-control" value="{{user.first_name}}">
 				  </div>
 			  </div>
 			  <div class="form-group row">
 				<label for="" class="col-sm-2 col-form-label">Last Name</label>
 				  <div class="col-sm-10">
-					<input name="lastName" type="text" class="form-control" value="{{person.last_name}}">
+					<input name="lastName" type="text" class="form-control" value="{{user.last_name}}">
 				  </div>
 			  </div>
 			  <div class="form-group row">
 				<label for="" class="col-sm-2 col-form-label">Username</label>
 				  <div class="col-sm-10">
-					<input name="username" type="text"  class="form-control" value="{{person.username}}">
+					<input name="username" type="text" readonly class="form-control" value="{{user.username}}">
 				  </div>
 			  </div>
 			  <div class="form-group row">
 				<label for="" class="col-sm-2 col-form-label">Email</label>
 				  <div class="col-sm-10">
-					<input name="email" type="text" class="form-control" value="{{person.email}}">
+					<input name="email" type="text" class="form-control" value="{{user.email}}">
 				  </div>
 			  </div>
 			  <div class="form-group row">
-				<label for="" class="col-sm-2 col-form-label">Active</label>
+				<label for="" class="col-sm-2 col-form-label">Date Joined</label>
 				  <div class="col-sm-10">
-					<input type="radio" name="is_active" {% if person.is_active %}checked{% endif %} class="form-control" value="True">YES
-					<input type="radio" name="is_active" {% if not person.is_active %}checked{% endif %} class="form-control" value="False">No
-				  </div>
-			  </div>
-			  <div class="form-group row">
-				<label for="" class="col-sm-2 col-form-label">Administrator</label>
-				  <div class="col-sm-10">
-					<input type="radio" name="is_super" {% if person.is_superuser %}checked{% endif %} class="form-control" value="True">YES
-					<input type="radio" name="is_super" {% if not person.is_superuser %}checked{% endif %} class="form-control" value="False">No
+					<input type="text" readonly class="form-control" value="{{user.date_joined}}">
 				  </div>
 			  </div>
 			  <div class="form-group text-center">
 				  <button class="btn btn-info" type="submit">Update User</button>
+				<button type="button" class="btn btn-danger" onClick="location.href='#'">Change Password</button>
 			  </div>
 			</form>
 	  </div>
