--- a/myswitch/templates/myswitch/rates.html
+++ b/myswitch/templates/myswitch/rates.html
@@ -1,12 +1,8 @@
 <!--transfer/dashboard/-->
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Transactions Summary{% endblock %}
+{% block title %}Rate Management{% endblock %}
 {% block content %}
-	<!-- checking if user is set -->
-	{% if not user.first_name %}
-		<script>window.location.href = "{% url 'profile' %}";</script>
-	{% endif %}
 	<!-- navbar --> 
 	<div class="templatemo-top-menu">
 		<div class="container">
@@ -16,7 +12,7 @@
 					<a href="{% url 'dashboard' %}" class="navbar-brand"><img src="{% static 'transferApp/images/official_switch.png' %}" alt="switch logo" title="switch" height="80" /></a>
 					<div class="collapse navbar-collapse nav justify-content-end" id="navbarNav">
 						<ul class="navbar-nav" style="margin-top: 40px;">
-						  <li class="nav-item">
+						  <li class="nav-item ">
 							<a class="nav-link" href="{% url 'dashboard' %}">Home <span class="sr-only">(current)</span></a>
 						  </li>
 						  <li class="nav-item">
@@ -35,7 +31,7 @@
 								 <a class="dropdown-item" href="{% url 'transactions' %}">View all Transactions</a>
 								 <a class="dropdown-item" href="{% url 'rateManagement' %}">Rates</a>
 								 {% endif %}
-							  	<a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+							  	<a class="dropdown-item" href="{% url 'logout_view' %}">Logout</a>
 							  </div>
 						  </li>
 						</ul>
@@ -46,69 +42,51 @@
 		</div> <!-- /container -->
 	</div>
 	  
+	<div>
+	</div>
+	  
 	<!-- Welcome -->
 	<div class="templatemo-welcome" id="templatemo-welcome">
 		<div class="container">
 			<div class="templatemo-slogan text-center">
-				<span class="txt_darkgrey">Welcome to </span><span class="txt_red">Switch</span>
+				<span class="txt_darkgrey"></span><span class="txt_red">Switch</span>
 				<p class="txt_slogan"><i>An application that facilitate the use of transfer in a company</i></p>
+			<button class="btn btn-danger" onClick="location.href='{% url 'transfer' %}'">Transaction</button>
 			</div>
 		</div>
 	</div>
 	  
-	<!-- Transaction -->
-	  <div class="transaction container">
-		  <h5 class="text-center mt-4">Transaction</h5>
-		  <div class="container">
-			  <p class="text-center"><a href="#" onclick="printTable();return false;"><img src="{% static 'transferApp/images/printer.ico' %}" height="25" alt="printing"></a></p>
-			  <div class="card mb-3" id="printAll">
-			  <div class="card-header bg-info text-center">List of all transaction made</div>
-			  <div class="card-body">
-				<table class="table">
-					<thead>
-						<tr>
-							<th>#</th>
-							<th>From</th>
-							<th>Original Amount</th>
-							<th>Transfered Amount</th>
-							<th>Date</th>
-							<th>User</th>
-							<th>Comment</th>
-						</tr>
-					</thead>
-					<tbody>
-					  {% if transaction %}
-					  {% for transact in transaction %}
-					  <tr>
-						<td>{{transact.id}}</td>
-						<td>{{transact.transfer_origin}}</td>
-						<td>{{transact.transfer_originAmount}}</td>
-						<td>{{transact.transfer_givenAmount}}</td>
-						<td>{{transact.transfer_Date}}</td>
-						<td>{{transact.transfer_by.get_full_name}}</td>
-						<td>{{transact.transfer_comment}}</td>
-					  </tr>
-					  {% endfor %}
-					  {% else %}
-					  <p class="">No transaction made</p>
-					  {% endif %}
-					</tbody>
-				  </table>
-			  </div>
-			</div>
-		  </div>
-		  
+	<!-- users -->
+	  <div class="container">
+		  <table class="table">
+		  	<thead>
+			  	<tr>
+					<th>ID</th>
+					<th>Unit</th>
+					<th>Convert From</th>
+					<th>Convert To</th>
+					<th>Action</th>
+				</tr>
+			  </thead>
+			  <tbody>
+				  {% if rates %}
+				  {% for rate in rates %}
+				  <tr>
+				  	<td>{{rate.id}}</td>
+				  	<td>{{rate.unitRate}}</td>
+				  	<td>{{rate.currency_from}}</td>
+				  	<td>{{rate.currency_to}}</td>
+					<td><a href="{% url 'rateManagementSingle' rate.id %}">edit</a></td>
+				  </tr>
+				  {% endfor %}
+				  {% else %}
+				  <p class="">No Users created</p>
+				  {% endif %}
+			  	
+			  </tbody>
+			  <tfoot>
+			  
+			  </tfoot>
+		  </table>
 	  </div>
-{% endblock %}
-{% block script %}
-	<script>
-		//print transaction
-		function printTable(){
-			var printContents = document.getElementById("printAll").innerHTML;
-			var originalContents = document.body.innerHTML;
-			document.body.innerHTML = printContents;
-			window.print();
-			document.body.innerHTML = originalContents;
-		}
-	</script>
 {% endblock %}
