--- a/myswitch/templates/myswitch/user_profile.html
+++ b/myswitch/templates/myswitch/user_profile.html
@@ -1,7 +1,7 @@
 <!--transfer/dashboard/-->
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Profile{% endblock %}
+{% block title %}Profile Change{% endblock %}
 {% block content %}
 	<!-- navbar --> 
 	<div class="templatemo-top-menu">
@@ -31,7 +31,7 @@
 								 <a class="dropdown-item" href="{% url 'transactions' %}">View all Transactions</a>
 								 <a class="dropdown-item" href="{% url 'rateManagement' %}">Rates</a>
 								 {% endif %}
-							  	<a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+							  	<a class="dropdown-item" href="{% url 'logout_view' %}">Logout</a>
 							  </div>
 						  </li>
 						</ul>
@@ -56,17 +56,51 @@
 		</div>
 	</div>
 	  
-	<!-- rate -->
+	<!-- Transaction -->
 	  <div class="profile container">
-		  <form class="" action="{% url 'rateManagementSingle' rate.id %}" method="post">
+		  <form class="" action="{% url 'usersProfile' person.id %}" method="post">
 			  {% csrf_token %}
-			  <h5 class="text-center mt-4">Rate Change</h5>
-			  <div class="form-group text-center">
-				<label for="" class="col-sm-2 col-form-label">Add New Rate</label>
-				<input name="unitRate" type="number" step="0.01" class="form-control" style="width: 500px; margin-left: auto;margin-right: auto;">
+			  <h5 class="text-center mt-4">Profile</h5>
+			  <div class="form-group row">
+				<label for="" class="col-sm-2 col-form-label">First Name</label>
+				  <div class="col-sm-10">
+					<input name="firstName" type="text" class="form-control" value="{{person.first_name}}">
+				  </div>
+			  </div>
+			  <div class="form-group row">
+				<label for="" class="col-sm-2 col-form-label">Last Name</label>
+				  <div class="col-sm-10">
+					<input name="lastName" type="text" class="form-control" value="{{person.last_name}}">
+				  </div>
+			  </div>
+			  <div class="form-group row">
+				<label for="" class="col-sm-2 col-form-label">Username</label>
+				  <div class="col-sm-10">
+					<input name="username" type="text"  class="form-control" value="{{person.username}}">
+				  </div>
+			  </div>
+			  <div class="form-group row">
+				<label for="" class="col-sm-2 col-form-label">Email</label>
+				  <div class="col-sm-10">
+					<input name="email" type="text" class="form-control" value="{{person.email}}">
+				  </div>
+			  </div>
+			  <div class="form-group row">
+				<label for="" class="col-sm-2 col-form-label">Active</label>
+				  <div class="col-sm-10">
+					<input type="radio" name="is_active" {% if person.is_active %}checked{% endif %} class="form-control" value="True">YES
+					<input type="radio" name="is_active" {% if not person.is_active %}checked{% endif %} class="form-control" value="False">No
+				  </div>
+			  </div>
+			  <div class="form-group row">
+				<label for="" class="col-sm-2 col-form-label">Administrator</label>
+				  <div class="col-sm-10">
+					<input type="radio" name="is_super" {% if person.is_superuser %}checked{% endif %} class="form-control" value="True">YES
+					<input type="radio" name="is_super" {% if not person.is_superuser %}checked{% endif %} class="form-control" value="False">No
+				  </div>
 			  </div>
 			  <div class="form-group text-center">
-				  <button class="btn btn-info" type="submit">Add New Rate</button>
+				  <button class="btn btn-info" type="submit">Update User</button>
 			  </div>
 			</form>
 	  </div>
